@@ -18,14 +18,97 @@
 
 """Loading CF profiles files."""
 
-__all__=['CFloadprofile','CFprofile']
+__all__=['CFprofile','CFloadprofile','CFprofvar']
 
 import Numeric, PyGMT
 from CF_loadfile import *
 from CF_utils import CFinterpolate_xy
 from PyGMT import Grid
 from CF_utils import CFinterpolate_linear
+from CF_IOmisc import CFreadlines
 
+class CFprofile(object):
+    """Handling Profile lines."""
+
+    def __init__(self,cffile,interval=10000.,xrange=[None, None],xscale=0.001):
+        """Initialise.
+        
+        cffile: CF file object
+        interval: linearly interpolate profile
+        xrange: clip profile (Default [None,None])
+        xscale: scale x values
+        """
+
+        self.cffile = cffile
+        self.interval = interval
+        self.xscale = xscale
+        self.xrange = xrange
+
+    def set_control_points(self,xloc,yloc,projected=True):
+        """Set control points.
+
+        xloc/yloc: control points along profile.
+        projected: set to True (Default) if xloc/yloc are in projected coord system
+        """
+
+        if projected:
+            self.xloc = xloc
+            self.yloc = yloc
+        else:
+            self.xloc = []
+            self.yloc = []
+            for i in range(0,len(xloc)):
+                point = self.cffile.project([xloc[i],yloc[i]])
+                self.xloc.append(point[0])
+                self.yloc.append(point[1])
+                
+        self.interpolated = CFinterpolate_xy([self.xloc,self.yloc],self.interval)
+        
+        if self.xrange[0] == None:
+            start = 0
+        else:
+            start = int(self.xrange[0]/self.interval)
+        if self.xrange[1] == None:
+            end = -1
+        else:
+            end = int(self.xrange[1]/self.interval+0.9999)
+        self.interpolated = self.interpolated[:,start:end]
+        self.interval = self.interval*self.xscale
+        self.xrange = [start*self.interval, end*self.interval]
+        self.xvalues = []
+        for i in range(0,len(self.interpolated[1,:])):
+            self.xvalues.append(self.xrange[0]+i*self.interval)
+
+        # clip to region of file
+        interpx = []
+        interpy = []
+        xvalues = []
+        for i in range(0,len(self.interpolated[1,:])):
+            if self.cffile.inside(self.interpolated[:,i]):
+                interpx.append(self.interpolated[0,i])
+                interpy.append(self.interpolated[1,i])
+                xvalues.append(self.xvalues[i])
+        self.xvalues = xvalues
+        self.interpolated = Numeric.array([interpx,interpy],Numeric.Float32)
+
+    def coords_file(self,fname,projected=True):
+        """Read control points from file.
+
+        fname: name of file to be read
+        projected: set to True (Default) if xloc/yloc are in projected coord system
+        """
+
+        xdata = []
+        ydata = []
+        infile = file(fname)
+        for line in CFreadlines(infile):
+            l = line.split()
+            xdata.append(float(l[0]))
+            ydata.append(float(l[1]))                         
+        infile.close()
+        self.set_control_points(xdata,ydata,projected=projected)
+                                          
+                                          
 class CFloadprofile(CFloadfile):
     """Loading a profile line from a CF netCDF file."""
 
@@ -41,54 +124,18 @@ class CFloadprofile(CFloadfile):
         """
         
         CFloadfile.__init__(self,fname)
+
+        self.profiledata = CFprofile(self,interval=interval,xrange=xrange,xscale=xscale)
+        self.profiledata.set_control_points(xloc,yloc,projected=projected)
+        self.xscale = self.profiledata.xscale
+        self.xloc = self.profiledata.xloc
+        self.yloc = self.profiledata.yloc
+        self.interval = self.profiledata.interval
+        self.interpolated = self.profiledata.interpolated
+        self.xvalues = self.profiledata.xvalues
         
         # caching profiles
         self.__profiles = {}
-        
-        # vertical resoultion
-        self.zres = 2.
-        self.xscale = xscale
-        
-        if projected:
-            self.xloc = xloc
-            self.yloc = yloc
-        else:
-            self.xloc = []
-            self.yloc = []
-            for i in range(0,len(xloc)):
-                point = self.project([xloc[i],yloc[i]])
-                self.xloc.append(point[0])
-                self.yloc.append(point[1])
-
-        self.interval = interval
-        self.interpolated = CFinterpolate_xy([self.xloc,self.yloc],self.interval)
-
-        if xrange[0] == None:
-            start = 0
-        else:
-            start = int(xrange[0]/interval)
-        if xrange[1] == None:
-            end = len(self.interpolated[0,:])
-        else:
-            end = int(xrange[1]/interval+0.9999)
-        self.interpolated = self.interpolated[:,start:end]
-        self.interval = self.interval*xscale
-        self.xrange = [start*self.interval, end*self.interval]
-        self.xvalues = []
-        for i in range(0,len(self.interpolated[1,:])):
-            self.xvalues.append(self.xrange[0]+i*self.interval)
-
-        # clip to region of file
-        interpx = []
-        interpy = []
-        xvalues = []
-        for i in range(0,len(self.interpolated[1,:])):
-            if self.inside(self.interpolated[:,i]):
-                interpx.append(self.interpolated[0,i])
-                interpy.append(self.interpolated[1,i])
-                xvalues.append(self.xvalues[i])
-        self.xvalues = xvalues
-        self.interpolated = Numeric.array([interpx,interpy],Numeric.Float32)
 
     def getprofile(self,var):
         """Get a profile variable from file.
@@ -98,7 +145,7 @@ class CFloadprofile(CFloadfile):
         this method caches the return profile variable structure."""
 
         if var not in self.__profiles:
-            self.__profiles[var] = CFprofile(self,var)
+            self.__profiles[var] = CFprofvar(self,var)
         return self.__profiles[var]
 
     def getExtent(self,time=None,interval=1):
@@ -132,7 +179,7 @@ class CFloadprofile(CFloadfile):
         # if we are at the end we just return position of last value to close data set
         return self.xvalues[0]
 
-class CFprofile(CFvariable):
+class CFprofvar(CFvariable):
     """Handling CF Profiles."""
 
     def __init__(self,cfprofile,var):
@@ -221,9 +268,9 @@ class CFprofile(CFvariable):
 
         if time not in self.__data2d:
             # load ice thickness and bedrock profiles
-            ihprof = Numeric.array(CFprofile(self.cffile,'thk').getProfile(time))
+            ihprof = Numeric.array(CFprofvar(self.cffile,'thk').getProfile(time))
             try:
-                rhprof = Numeric.array(CFprofile(self.cffile,'topg').getProfile(time))
+                rhprof = Numeric.array(CFprofvar(self.cffile,'topg').getProfile(time))
             except:
                 rhprof = Numeric.zeros(len(ihprof))
             ymin=min(rhprof)
